--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,23 +12,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-17 Sat 16:08]
+#+CAPTION: Clock summary at [2016-12-17 Sat 16:34]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *33:31* |       |       | 100.0 |
+| *Total time*                                                                | *33:56* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 33:31   |       |       | 100.0 |
-| Active                                                                      |         | 33:31 |       | 100.0 |
+| Stories                                                                     | 33:56   |       |       | 100.0 |
+| Active                                                                      |         | 33:56 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.5 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  17.7 |
-| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   4.2 |
-| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  11.3 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  35.6 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  17.4 |
+| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   4.1 |
+| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  11.1 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  35.2 |
 | COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   2.0 |
-| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  11.7 |
-| STARTED Update C# stitch templates to match code                            |         |       |  4:26 |  13.2 |
+| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  11.5 |
+| STARTED Update C# stitch templates to match code                            |         |       |  4:51 |  14.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -388,6 +388,7 @@ We developed a number of C++ "canned tests" for all model elements. We
 need to port them across to C#.
 
 *** STARTED Update C# stitch templates to match code                  :story:
+    CLOCK: [2016-12-17 Sat 16:09]--[2016-12-17 Sat 16:34] =>  0:25
     CLOCK: [2016-12-17 Sat 15:31]--[2016-12-17 Sat 16:08] =>  0:37
     CLOCK: [2016-12-17 Sat 15:06]--[2016-12-17 Sat 15:30] =>  0:24
     CLOCK: [2016-12-17 Sat 14:52]--[2016-12-17 Sat 15:05] =>  0:13
