--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,23 +12,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-17 Sat 16:58]
+#+CAPTION: Clock summary at [2016-12-17 Sat 18:23]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *34:18* |       |       | 100.0 |
+| *Total time*                                                                | *34:32* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 34:18   |       |       | 100.0 |
-| Active                                                                      |         | 34:18 |       | 100.0 |
+| Stories                                                                     | 34:32   |       |       | 100.0 |
+| Active                                                                      |         | 34:32 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.5 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  17.2 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  17.1 |
 | COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   4.1 |
 | COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  11.0 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  34.8 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  34.6 |
 | COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   2.0 |
-| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  11.4 |
-| STARTED Update C# stitch templates to match code                            |         |       |  5:13 |  15.2 |
+| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  11.3 |
+| STARTED Update C# stitch templates to match code                            |         |       |  5:27 |  15.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -388,6 +388,7 @@ We developed a number of C++ "canned tests" for all model elements. We
 need to port them across to C#.
 
 *** STARTED Update C# stitch templates to match code                  :story:
+    CLOCK: [2016-12-17 Sat 18:09]--[2016-12-17 Sat 18:23] =>  0:14
     CLOCK: [2016-12-17 Sat 16:39]--[2016-12-17 Sat 16:58] =>  0:19
     CLOCK: [2016-12-17 Sat 16:35]--[2016-12-17 Sat 16:38] =>  0:03
     CLOCK: [2016-12-17 Sat 16:09]--[2016-12-17 Sat 16:34] =>  0:25
