--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,23 +12,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-19 Mon 10:29]
+#+CAPTION: Clock summary at [2016-12-19 Mon 10:49]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *36:15* |       |       | 100.0 |
+| *Total time*                                                                | *36:33* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 36:15   |       |       | 100.0 |
-| Active                                                                      |         | 36:15 |       | 100.0 |
+| Stories                                                                     | 36:33   |       |       | 100.0 |
+| Active                                                                      |         | 36:33 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.4 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  16.3 |
-| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   3.9 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  16.2 |
+| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   3.8 |
 | COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  10.4 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  32.9 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  32.6 |
 | COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.9 |
-| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  10.8 |
-| STARTED Update C# stitch templates to match code                            |         |       |  7:10 |  19.8 |
+| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  10.7 |
+| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  20.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -387,7 +387,9 @@ Links:
 We developed a number of C++ "canned tests" for all model elements. We
 need to port them across to C#.
 
-*** STARTED Update C# stitch templates to match code                  :story:
+*** COMPLETED Update C# stitch templates to match code                :story:
+    CLOSED: [2016-12-19 Mon 10:49]
+    CLOCK: [2016-12-19 Mon 10:43]--[2016-12-19 Mon 10:49] =>  0:06
     CLOCK: [2016-12-19 Mon 10:30]--[2016-12-19 Mon 10:42] =>  0:12
     CLOCK: [2016-12-19 Mon 10:18]--[2016-12-19 Mon 10:29] =>  0:11
     CLOCK: [2016-12-19 Mon 10:14]--[2016-12-19 Mon 10:17] =>  0:03
