--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,23 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-19 Mon 10:49]
+#+CAPTION: Clock summary at [2016-12-19 Mon 11:33]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *36:33* |       |       | 100.0 |
+| *Total time*                                                                | *37:14* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 36:33   |       |       | 100.0 |
-| Active                                                                      |         | 36:33 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.6 |
+| Stories                                                                     | 37:14   |       |       | 100.0 |
+| Active                                                                      |         | 37:14 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.4 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  16.2 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  15.9 |
 | COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   3.8 |
-| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  10.4 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  32.6 |
-| COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.9 |
-| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  10.7 |
-| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  20.4 |
+| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |  10.2 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  32.1 |
+| COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.8 |
+| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  10.5 |
+| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  20.1 |
+| STARTED Add support for enumerations in C#                                  |         |       |  0:41 |   1.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -426,6 +427,37 @@ handcrafted code.
   postfix. Also, its very confusing to have helpers which are not
   Dogen helpers. We need to rename them.
 
+*** STARTED Add support for enumerations in C#                        :story:
+    CLOCK: [2016-12-19 Mon 11:26]--[2016-12-19 Mon 11:33] =>  0:07
+    CLOCK: [2016-12-19 Mon 10:51]--[2016-12-19 Mon 11:25] =>  0:34
+
+Add all the machinery needed to generate enums in C#. We need to also
+add the flag for default enum:
+
+:         "is_default_enumeration_type": true,
+
+This is causing errors at the moment:
+
+: std::exception::what: Type not found: is_default_enumeration_type
+
+Which is weird since it exists in C++. Actually this is not a
+meta-data parameter, just a regular Json element.
+
+Links:
+
+- [[https://msdn.microsoft.com/en-us/library/sbbt4032.aspx][enum (C# Reference)]]
+
+*** Rename formatting assistant                                       :story:
+
+With the introduction of assistants in C#, we now have overloaded the
+term. We need to find another name to refer to the formatting
+assistant in C++ so avoid confusion.
+
+*** Add support for types in packages in C#                           :story:
+
+We need to add elements in our test model inside a package and ensure
+the generated code is correct.
+
 *** Consider adding a clone method for C#                             :story:
 
 It would be nice to have a way to clone a object graph. We probably
@@ -631,24 +663,6 @@ supply two parameters:
 
 These should be supplied as meta data and used when constructing
 fabric types.
-
-*** Add support for enumerations in C#                                :story:
-
-Add all the machinery needed to generate enums in C#. We need to also
-add the flag for default enum:
-
-:         "is_default_enumeration_type": true,
-
-This is causing errors at the moment:
-
-: std::exception::what: Type not found: is_default_enumeration_type
-
-Which is weird since it exists in C++. Actually this is not a
-meta-data parameter, just a regular Json element.
-
-Links:
-
-- [[https://msdn.microsoft.com/en-us/library/sbbt4032.aspx][enum (C# Reference)]]
 
 *** Add complete constructor for C# types                             :story:
 
