--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,25 +12,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-19 Mon 13:47]
+#+CAPTION: Clock summary at [2016-12-19 Mon 14:04]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *39:01* |       |       | 100.0 |
+| *Total time*                                                                | *39:19* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 39:01   |       |       | 100.0 |
-| Active                                                                      |         | 39:01 |       | 100.0 |
+| Stories                                                                     | 39:19   |       |       | 100.0 |
+| Active                                                                      |         | 39:19 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.3 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  15.2 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  15.0 |
 | COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   3.6 |
-| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   9.7 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  30.6 |
-| COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.8 |
+| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   9.6 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  30.4 |
+| COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.7 |
 | COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  10.0 |
-| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  19.1 |
+| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  19.0 |
 | COMPLETED Move enumeration population to yarn                               |         |       |  0:43 |   1.8 |
-| STARTED Add support for enumerations in C#                                  |         |       |  1:45 |   4.5 |
+| COMPLETED Add support for types in packages in C#                           |         |       |  0:18 |   0.8 |
+| COMPLETED Add support for enumerations in C#                                |         |       |  1:45 |   4.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -437,7 +438,15 @@ enumerator, etc in each of the frontends. This is not ideal; we should
 only populate the basic information in the frontend and then expand it
 in yarn.
 
-*** STARTED Add support for enumerations in C#                        :story:
+*** COMPLETED Add support for types in packages in C#                 :story:
+    CLOSED: [2016-12-19 Mon 14:02]
+    CLOCK: [2016-12-19 Mon 13:47]--[2016-12-19 Mon 14:05] =>  0:18
+
+We need to add elements in our test model inside a package and ensure
+the generated code is correct.
+
+*** COMPLETED Add support for enumerations in C#                      :story:
+    CLOSED: [2016-12-19 Mon 13:49]
     CLOCK: [2016-12-19 Mon 13:13]--[2016-12-19 Mon 13:46] =>  0:33
     CLOCK: [2016-12-19 Mon 12:41]--[2016-12-19 Mon 13:12] =>  0:31
     CLOCK: [2016-12-19 Mon 11:26]--[2016-12-19 Mon 11:33] =>  0:07
@@ -464,11 +473,6 @@ Links:
 With the introduction of assistants in C#, we now have overloaded the
 term. We need to find another name to refer to the formatting
 assistant in C++ so avoid confusion.
-
-*** Add support for types in packages in C#                           :story:
-
-We need to add elements in our test model inside a package and ensure
-the generated code is correct.
 
 *** Consider adding a clone method for C#                             :story:
 
