--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,26 +12,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-19 Mon 14:04]
+#+CAPTION: Clock summary at [2016-12-19 Mon 14:09]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *39:19* |       |       | 100.0 |
+| *Total time*                                                                | *39:22* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 39:19   |       |       | 100.0 |
-| Active                                                                      |         | 39:19 |       | 100.0 |
+| Stories                                                                     | 39:22   |       |       | 100.0 |
+| Active                                                                      |         | 39:22 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.3 |
 | COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  15.0 |
 | COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   3.6 |
 | COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   9.6 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  30.4 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  30.3 |
 | COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.7 |
-| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |  10.0 |
+| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   9.9 |
 | COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  19.0 |
 | COMPLETED Move enumeration population to yarn                               |         |       |  0:43 |   1.8 |
 | COMPLETED Add support for types in packages in C#                           |         |       |  0:18 |   0.8 |
-| COMPLETED Add support for enumerations in C#                                |         |       |  1:45 |   4.5 |
+| COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   4.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -447,6 +447,7 @@ the generated code is correct.
 
 *** COMPLETED Add support for enumerations in C#                      :story:
     CLOSED: [2016-12-19 Mon 13:49]
+    CLOCK: [2016-12-19 Mon 14:06]--[2016-12-19 Mon 14:09] =>  0:03
     CLOCK: [2016-12-19 Mon 13:13]--[2016-12-19 Mon 13:46] =>  0:33
     CLOCK: [2016-12-19 Mon 12:41]--[2016-12-19 Mon 13:12] =>  0:31
     CLOCK: [2016-12-19 Mon 11:26]--[2016-12-19 Mon 11:33] =>  0:07
