--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,26 +12,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-19 Mon 14:09]
+#+CAPTION: Clock summary at [2016-12-19 Mon 14:24]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *39:22* |       |       | 100.0 |
+| *Total time*                                                                | *39:36* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 39:22   |       |       | 100.0 |
-| Active                                                                      |         | 39:22 |       | 100.0 |
+| Stories                                                                     | 39:36   |       |       | 100.0 |
+| Active                                                                      |         | 39:36 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.3 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  15.0 |
-| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   3.6 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  14.9 |
+| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   3.5 |
 | COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   9.6 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  30.3 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  30.1 |
 | COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.7 |
 | COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   9.9 |
-| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  19.0 |
+| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  18.9 |
 | COMPLETED Move enumeration population to yarn                               |         |       |  0:43 |   1.8 |
 | COMPLETED Add support for types in packages in C#                           |         |       |  0:18 |   0.8 |
-| COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   4.6 |
+| COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   4.5 |
+| COMPLETED Add support for exceptions in C#                                  |         |       |  0:14 |   0.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -468,6 +469,17 @@ meta-data parameter, just a regular Json element.
 Links:
 
 - [[https://msdn.microsoft.com/en-us/library/sbbt4032.aspx][enum (C# Reference)]]
+
+*** COMPLETED Add support for exceptions in C#                        :story:
+    CLOSED: [2016-12-19 Mon 14:23]
+    CLOCK: [2016-12-19 Mon 14:10]--[2016-12-19 Mon 14:24] =>  0:14
+
+We don't need anything particularly elaborate, just a trivial
+exception inheriting from =System.Exception=.
+
+Links:
+
+- [[https://msdn.microsoft.com/en-us/library/ms173163.aspx][Creating and Throwing Exceptions (C# Programming Guide)]]
 
 *** Rename formatting assistant                                       :story:
 
